<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#646464"
    tools:context="com.hackathon.izitaxed.app.MainActivity">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:textSize="24dp"
                android:id="@+id/vrm_box"
                android:background="@drawable/vrm_box"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:hint="@string/defaultVRM"
                android:typeface="monospace"
                />
        </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkTitle"
            android:id="@+id/checkTitle"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="24dp"
            android:textStyle="bold"
            android:layout_marginTop="90dp"
            />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBox1"
            android:id="@+id/checkBox1"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:layout_marginTop="170dp"
            />


        <RelativeLayout
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="320dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/check_icon"
            android:id="@+id/checkButton"
            >

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="120dp"
            android:text="@string/welcomeBox1"
            android:layout_centerHorizontal="true"
            android:id="@+id/vehDetail"
            android:textSize="18dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/bubble"
            >

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="270dp"
                android:layout_height="20dp"
                android:gravity="left"
                android:id="@+id/make"
                android:text="@string/dummyMake"/>

            <TextView
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp"
                android:layout_width="270dp"
                android:layout_height="20dp"
                android:gravity="left"
                android:id="@+id/model"
                android:text="@string/dummyModel"/>

            <TextView
                android:layout_marginTop="70dp"
                android:layout_marginLeft="10dp"
                android:layout_width="270dp"
                android:layout_height="20dp"
                android:gravity="left"
                android:id="@+id/color"
                android:text="@string/dummyColor"/>

            </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/taxed"
            android:id="@+id/taxed"
            android:layout_marginTop="220dp"
            android:textColor="#FFFFFF"
            android:textSize="24dp"
            android:textStyle="bold"
            android:gravity="center"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/unTaxed"
            android:id="@+id/unTaxed"
            android:layout_marginTop="220dp"
            android:textColor="#FFFFFF"
            android:textSize="24dp"
            android:textStyle="bold"
            android:gravity="center"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/notFound"
            android:id="@+id/notFound"
            android:layout_marginTop="220dp"
            android:textColor="#FFFFFF"
            android:textSize="24dp"
            android:textStyle="bold"
            android:gravity="center"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkThanks"
            android:id="@+id/checkThanks"
            android:layout_marginTop="360dp"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            android:textStyle="bold"
            android:gravity="center"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkNowSubmit"
            android:id="@+id/checkNowSubmit"
            android:layout_marginTop="360dp"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            android:textStyle="bold"
            android:gravity="center"
            />

        <RelativeLayout
            android:layout_width="144dp"
            android:layout_height="36dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/backButton"
            android:layout_marginBottom="10dp"
            android:background="@drawable/back_nav">
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="144dp"
            android:layout_height="36dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:id="@+id/continueButton"
            android:layout_marginBottom="10dp"
            android:background="@drawable/next_nav"
            >
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>
