<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#646464"
    tools:context="com.hackathon.izitaxed.app.MainActivity">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeBox1"
            android:id="@+id/welcomeBox1"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="35dp"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeBox2"
            android:id="@+id/welcomeBox2"
            android:textSize="17dp"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeBox3"
            android:id="@+id/welcomeBox3"
            android:textSize="17dp"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeBox4"
            android:id="@+id/welcomeBox4"
            android:textSize="17dp"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeBox5"
            android:id="@+id/welcomeBox5"
            android:textSize="17dp"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="15dp"
            />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="144dp"
            android:layout_height="36dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:id="@+id/continueButton"
            android:layout_marginBottom="15dp"
            android:background="@drawable/next_nav">
        </RelativeLayout>





    </RelativeLayout>
</RelativeLayout>
